--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "tailwind-scrollbar": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
     "next": "14.2.7"
